# mnemo

./: .dockerignore  .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FALSIFICATION.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  STEP_CHANGES.md  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: benchmark-eval.yml  memory-falsification.yml  nightly-soak.yml  package-ghcr.yml  publish-python-sdk.yml  publish-typescript-sdk.yml  quality-gates.yml  release.yml
benches/: latency.rs
config/: default.toml
crates/mnemo-core/: Cargo.toml
crates/mnemo-core/src/: encryption.rs  error.rs  lib.rs  sync.rs
crates/mnemo-core/src/models/: agent.rs  api_key.rs  attachment.rs  clarification.rs  classification.rs  context.rs  counterfactual.rs  digest.rs  edge.rs  entity.rs  episode.rs  goal.rs  guardrail.rs  lora.rs  mod.rs  narrative.rs  region.rs  session.rs  span.rs  user.rs  view.rs  webhook_event.rs
crates/mnemo-core/src/traits/: blob.rs  document.rs  fulltext.rs  llm.rs  mod.rs  storage.rs  transcription.rs  vision.rs
crates/mnemo-gnn/: Cargo.toml
crates/mnemo-gnn/src/: benchmark.rs  lib.rs
crates/mnemo-graph/: Cargo.toml
crates/mnemo-graph/src/: lib.rs
crates/mnemo-ingest/: Cargo.toml
crates/mnemo-ingest/src/: dag.rs  lib.rs
crates/mnemo-ingest/tests/: ingest.rs
crates/mnemo-llm/: Cargo.toml
crates/mnemo-llm/src/: anthropic.rs  anthropic_vision.rs  embedder.rs  lib.rs  local_embed.rs  openai_compat.rs  openai_transcription.rs  openai_vision.rs  pdf_parser.rs
crates/mnemo-lora/: Cargo.toml
crates/mnemo-lora/src/: lib.rs  math.rs
crates/mnemo-mcp/: Cargo.toml
crates/mnemo-mcp/src/: context.rs  lib.rs  main.rs  prompts.rs  protocol.rs  resources.rs  security_tests.rs  sse.rs  subscriptions.rs  tools.rs  transport.rs
crates/mnemo-proto/: Cargo.toml  build.rs
crates/mnemo-proto/src/: lib.rs
crates/mnemo-retrieval/: Cargo.toml
crates/mnemo-retrieval/src/: classifier.rs  coherence.rs  compression.rs  hyperbolic.rs  lib.rs  router.rs
crates/mnemo-server/: Cargo.toml
crates/mnemo-server/dashboard/: app.js  index.html  style.css
crates/mnemo-server/src/: config.rs  dashboard.rs  grpc.rs  lib.rs  lora_handle.rs  main.rs  openapi.rs  routes.rs  state.rs  telemetry.rs
crates/mnemo-server/src/middleware/: auth.rs  mod.rs  request_context.rs
crates/mnemo-server/tests/: grpc_api.rs  memory_api.rs
crates/mnemo-storage/: Cargo.toml
crates/mnemo-storage/src/: lib.rs  local_blob_store.rs  qdrant_store.rs  redis_store.rs  redisearch.rs  s3_blob_store.rs
crates/mnemo-storage/tests/: qdrant.rs  storage.rs
deploy/bare-metal/: DEPLOY.md  mnemo.service  nginx.conf  update.sh
deploy/digitalocean/: DEPLOY.md
deploy/docker/: .env.example  DEPLOY.md  docker-compose.managed.yml  docker-compose.prod.yml  docker-compose.quickstart.yml  quickstart.sh
deploy/elestio/: DEPLOY.md  docker-compose.yml
deploy/gcp/: DEPLOY.md
deploy/linode/: DEPLOY.md
deploy/northflank/: DEPLOY.md  stack.json
deploy/railway/: DEPLOY.md
deploy/render/: DEPLOY.md  render.yaml
deploy/vultr/: DEPLOY.md
docs/: AGENT_IDENTITY_SUBSTRATE.md  API.md  ARCHITECTURE.md  BENCHMARKS.md  CAPABILITIES.md  COMPETITIVE.md  COMPETITIVE_MATRIX.md  COMPLIANCE.md  CONFIGURATION.md  DEPLOY.md  DEPLOYMENT_STATUS.md  DOMAIN_READINESS_MATRIX.md  EVALUATION.md  FACE_MELTER_FEATURES.md  IMPORTING_CHAT_HISTORY.md  METADATA_INDEX_LAYER.md  MNEMO_0.5.0.md  MNEMO_0.5.5.md  MNEMO_0.6.0.md  MULTI_MODAL_PRD.md  NEXT_MOVES.md  OPERATOR_DASHBOARD_PRD.md  OPERATOR_UX_EXECUTION_BACKLOG.md  OPERATOR_UX_PRD.md  P0_OPS_CONTROL_PLANE_PRD.md  P0_ROADMAP.md  P0_VALIDATION.md  PHASE_1_5_PRD.md  PHASE_2_PRD.md  PRD_DEPLOY.md  PRD_RED_TEAM_DEFERRED.md  PRIOR_SIGNAL_CHANNEL_VISIBILITY_EXECUTION_CHECKLIST.md  PRIOR_SIGNAL_CHANNEL_VISIBILITY_IMPLEMENTATION.md  PRIOR_SIGNAL_CHANNEL_VISIBILITY_SPEC.md  PRIOR_SIGNAL_CHANNEL_VISIBILITY_TYPES.md  PRIOR_SIGNAL_CHANNEL_VISIBILITY_V1_PLAN.md  PRIOR_SIGNAL_DISCUSSION.md  PRIOR_SIGNAL_OPPORTUNITIES.md  PRIOR_SIGNAL_PRD.md  PRIOR_SIGNAL_REFERENCE.md  (+13 more)
docs/wiki/: README.md
eval/: METHODOLOGY.md  README.md  compare.py  import_stress.py  latency_bench.py  lib.py  longmem_eval.py  pyproject.toml  recall_quality.py  scientific_research_cases.json  scientific_research_cases_v2.json  temporal_cases.json  temporal_eval.py
eval/backends/: custom_backend.py
eval/cases/: context_assembly.json  conversational.json  enterprise_crm.json  lora_personalization.json  multi_agent.json
eval/mnemo_eval/: __init__.py  __main__.py
eval/results/: longmem_mnemo.json  recall_mnemo.json  scientific_mnemo.json  temporal_eval_48a877a_2026-03-15T15-16-56.json  temporal_eval_48a877a_2026-03-15T15-24-42.json  temporal_mnemo.json  temporal_mnemo_spec08.json
integrations/anythingllm/: README.md  index.js  test.js  test_api.py
journal/: horizons_nodes.md  horizons_raw.md  horizons_reflect.md  horizons_synth.md
scripts/: quickstart.sh
sdk/python/: Makefile  README.md  docker-compose.test.yml  pyproject.toml
sdk/python/mnemo/: __init__.py  _errors.py  _models.py  _parsers.py  _transport.py  async_client.py  client.py
sdk/python/mnemo/ext/: __init__.py  langchain.py  llamaindex.py
sdk/python/scripts/: async_live_smoke.py
sdk/python/tests/: conftest.py  test_async_client.py  test_llamaindex_adapter.py  test_sdk.py
sdk/typescript/: README.md  package.json  tsconfig.json  tsup.config.ts
specs/: 01_dx_overhaul.md  02_memory_scoping_topology.md  03_temporal_reasoning.md  04_context_assembly.md  05_eval_category_definition.md  06_tinylora_agent_embeddings.md  07_aumrl_user_profiles.md  08_as_of_hard_filter.md
tests/: credential_scan.sh  dashboard_browser_smoke.py  dashboard_smoke.sh  deploy_artifact_validation.sh  docker_build_test.sh  e2e.sh  e2e_smoke.sh  eval_recall_quality.py  live_fleet_falsify.py  mock_openai_chat_server.py  operator_p0_drills.sh  phase_b_screenshots.py  test_messages_api.py
tests/integration/: ingest.rs  main.rs  (+1 more)
(+58 files in other folders)
