[workspace]
resolver = "2"
members = [
    "crates/mnemo-core",
    "crates/mnemo-server",
    "crates/mnemo-storage",
    "crates/mnemo-graph",
    "crates/mnemo-ingest",
    "crates/mnemo-retrieval",
    "crates/mnemo-llm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mnemo-ai/mnemo"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v7", "serde"] }
ulid = { version = "1", features = ["serde"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP server
axum = { version = "0.7", features = ["json", "query"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "json", "connection-manager"] }

# Qdrant
qdrant-client = "1"

# HTTP client (for LLM APIs)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Config
toml = "0.8"

# Testing
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

# Workspace crates
mnemo-core = { path = "crates/mnemo-core" }
mnemo-server = { path = "crates/mnemo-server" }
mnemo-storage = { path = "crates/mnemo-storage" }
mnemo-graph = { path = "crates/mnemo-graph" }
mnemo-ingest = { path = "crates/mnemo-ingest" }
mnemo-retrieval = { path = "crates/mnemo-retrieval" }
mnemo-llm = { path = "crates/mnemo-llm" }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Benchmarks need access to storage crate
[[bench]]
name = "latency"
harness = false
path = "benches/latency.rs"

# Integration tests
[[test]]
name = "integration"
path = "tests/integration/main.rs"

[dev-dependencies]
mnemo-core = { workspace = true }
mnemo-storage = { workspace = true }
mnemo-ingest = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
