[workspace]
resolver = "2"
members = [
    "crates/mnemo-core",
    "crates/mnemo-server",
    "crates/mnemo-storage",
    "crates/mnemo-graph",
    "crates/mnemo-ingest",
    "crates/mnemo-retrieval",
    "crates/mnemo-llm",
    "crates/mnemo-gnn",
    "crates/mnemo-lora",
    "crates/mnemo-mcp",
    "crates/mnemo-proto",
]

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anjaustin/mnemo"
homepage = "https://github.com/anjaustin/mnemo"
documentation = "https://github.com/anjaustin/mnemo/blob/main/docs/API.md"
description = "Memory infrastructure for production AI agents — temporal knowledge graph, hybrid retrieval, enterprise access control."
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1"

# AWS SDK for S3
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v5", "v7", "serde"] }
ulid = { version = "1", features = ["serde"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

# OpenTelemetry
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["trace", "metrics", "grpc-tonic", "tls"] }
tracing-opentelemetry = { version = "0.28", features = ["metrics"] }

# HTTP server
axum = { version = "0.7", features = ["json", "query"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "json", "connection-manager"] }

# Qdrant
qdrant-client = "1"

# HTTP client (for LLM APIs)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Regex
regex = "1"

# Cryptography
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }

# Config
toml = "0.8"

# OpenAPI
utoipa = { version = "5", features = ["chrono", "uuid"] }

# Embedded assets
rust-embed = "8"
mime_guess = "2"

# Testing
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

# Workspace crates
mnemo-core = { path = "crates/mnemo-core" }
mnemo-server = { path = "crates/mnemo-server" }
mnemo-storage = { path = "crates/mnemo-storage" }
mnemo-graph = { path = "crates/mnemo-graph" }
mnemo-ingest = { path = "crates/mnemo-ingest" }
mnemo-retrieval = { path = "crates/mnemo-retrieval" }
mnemo-llm = { path = "crates/mnemo-llm" }
mnemo-gnn = { path = "crates/mnemo-gnn" }
mnemo-lora = { path = "crates/mnemo-lora" }
mnemo-mcp = { path = "crates/mnemo-mcp" }
mnemo-proto = { path = "crates/mnemo-proto" }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
