[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mnemo-eval"
version = "0.1.0"
description = "AI Memory System Evaluation Framework — benchmark any memory backend"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["ai", "memory", "evaluation", "benchmark", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Zero runtime dependencies — stdlib only
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
mnemo-eval = "mnemo_eval.__main__:main"

[project.urls]
Homepage = "https://github.com/anomalyco/mnemo"
Issues = "https://github.com/anomalyco/mnemo/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mnemo_eval*"]

[tool.setuptools.package-data]
"mnemo_eval" = ["cases/*.json"]
