[package]
name = "mnemo-core"
description = "Core domain types and traits for Mnemo — memory engine for AI agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
utoipa = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
