[package]
name = "mnemo-gnn"
description = "Graph Neural Network re-ranking layer for Mnemo retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mnemo-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
