[package]
name = "mnemo-graph"
description = "Graph operations: traversal, community detection, summarization"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mnemo-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
