[package]
name = "mnemo-llm"
description = "LLM and embedding provider implementations for Mnemo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mnemo-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["rt", "macros"] }
