[package]
name = "mnemo-llm"
description = "LLM and embedding provider implementations for Mnemo"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["local-embed"]
local-embed = ["dep:fastembed"]

[dependencies]
mnemo-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
base64 = "0.22"
pdf-extract = "0.7"
fastembed = { version = "5", default-features = false, features = ["online", "hf-hub-rustls-tls", "ort-load-dynamic"], optional = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["rt", "macros"] }
