[package]
name = "mnemo-lora"
description = "TinyLoRA: per-agent embedding personalization for Mnemo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mnemo-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
