[package]
name = "mnemo-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP (Model Context Protocol) server for Mnemo — exposes memory tools to any MCP-compatible agent"

[[bin]]
name = "mnemo-mcp-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
urlencoding = "2"

[dev-dependencies]
tokio-test = { workspace = true }
