[package]
name = "mnemo-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP (Model Context Protocol) server for Mnemo — exposes memory tools to any MCP-compatible agent"

[[bin]]
name = "mnemo-mcp-server"
path = "src/main.rs"

[[bin]]
name = "mnemo-mcp-sse"
path = "src/bin/sse.rs"
required-features = ["sse"]

[lib]
path = "src/lib.rs"

[features]
default = []
sse = ["axum", "axum-extra", "tokio-stream", "futures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
urlencoding = "2"

# SSE transport (optional)
axum = { workspace = true, optional = true }
axum-extra = { version = "0.9", features = ["typed-header"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tower = { version = "0.5", features = ["util"] }
