[package]
name = "mnemo-proto"
description = "Protobuf/gRPC type definitions for the Mnemo memory API."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
tonic-build = "0.12"
