[package]
name = "mnemo-server"
description = "HTTP/REST and gRPC server for Mnemo"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["local-embed"]
local-embed = ["mnemo-llm/local-embed"]

[[bin]]
name = "mnemo-server"
path = "src/main.rs"

[dependencies]
mnemo-core = { workspace = true }
mnemo-storage = { workspace = true }
mnemo-llm = { workspace = true }
mnemo-ingest = { workspace = true }
mnemo-retrieval = { workspace = true }
mnemo-graph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rust-embed = { workspace = true }
mime_guess = { workspace = true }
mnemo-proto = { workspace = true }
tonic = "0.12"
tonic-health = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"

[dev-dependencies]
tokio-stream = { version = "0.1", features = ["net"] }
