[package]
name = "mnemo-storage"
description = "Redis + Qdrant storage backends for Mnemo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mnemo-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
qdrant-client = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-credential-types = { workspace = true }

[dev-dependencies]
tempfile = "3"
