[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemo-client"
version = "0.2.0"
description = "Python client for Mnemo memory API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mnemo" }]
license = { text = "Apache-2.0" }
dependencies = []

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["mnemo*"]
